tests/fail/semantic/product_field_index_on_non_atom.cyt
enzyme Test[] -> nothing
atom Value(field: int)

enzyme IndexOnNonAtom[a: Test, b: Value] -> Value(field: a.field)

enzyme IndexOnInt[a: Value] -> Value(field: a.field.field)

// args: --no-colour

// expected stderr:
// error: tried to access field `field` on non-atom type `Test`
//   ┌─ ../tests/fail/semantic/product_field_index_on_non_atom.cyt:4:60
//   │
// 1 │ enzyme Test[] -> nothing
//   │        ---- this non-atom type does not have the field `field`
//   ·
// 4 │ enzyme IndexOnNonAtom[a: Test, b: Value] -> Value(field: a.field)
//   │                                                            ^^^^^ no such field on non-atom type `Test`
// 
// error: tried to access field `field` on non-atom type `int`
//   ┌─ ../tests/fail/semantic/product_field_index_on_non_atom.cyt:6:53
//   │
// 6 │ enzyme IndexOnInt[a: Value] -> Value(field: a.field.field)
//   │                                                     ^^^^^ no such field on non-atom type `int`